# beancount-importers

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  typos.toml
.devcontainer/: Containerfile  devcontainer.json  docker-compose.yml  initialize.sh  post-attach.sh  post-start.sh  setup-user-conf.sh  workspace.code-workspace.example
.devcontainer/scripts/: copy-host-user-conf.sh  init-git.sh  init-precommit.sh  post-attach.sh  post-create.sh  setup-git-conf.sh
.githooks/: pre-commit
beancount_importers/: __init__.py
beancount_importers/cli/: README.md  __init__.py  telegram_downloader.py
beancount_importers/importers/: README.md  __init__.py  certo_one.py  finpension.py  ibkr.py  mintos.py  n26.py  neon.py  revolut.py  sbb.py  splitwise.py  telegram.py  zkb.py
tests/: __init__.py
tests/certo_one/: __init__.py  journal.beancount  test_certo_one.py
tests/cli/: test_telegram_downloader.py
tests/data/: CertoOne_Sample.csv  N26_Sample.csv  journal.beancount
tests/finpension/: FinPension_Sample.csv  __init__.py  test_finpension.py
tests/ibkr/: IBKR_Sample.csv  __init__.py  test_ibkr.py
tests/importers/: __init__.py  test_certo_one.py  test_n26.py
tests/mintos/: Mintos_Sample.csv  __init__.py  test_mintos.py
tests/n26/: __init__.py  journal_basic.beancount  journal_credit_debit.beancount  journal_edge_cases.beancount  journal_foreign_currency.beancount  journal_special_chars.beancount  test_n26.py
tests/neon/: Neon_Sample.csv  __init__.py  test_neon.py
tests/revolut/: Revolut_CHF_Sample.csv  Revolut_EUR_Sample.csv  __init__.py  test_revolut.py
tests/sbb/: SBB_Sample.csv  __init__.py  test_sbb.py
tests/splitwise/: Splitwise_HouseHold_Sample.csv  Splitwise_Trip_Sample.csv  __init__.py  test_splitwise.py
tests/telegram/: Telegram_Sample.csv  __init__.py  test_telegram.py
tests/zkb/: ZKB_Sample.csv  __init__.py  test_zkb.py
